--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
-
-<string name="facebook_app_id">1234</string>
-<string name="fb_login_protocol_scheme">fb1234</string>
-<string name="facebook_client_token">56789</string>
-
+<?xml version="1.0" encoding="utf-8"?>
+<resources>
+    <string name="app_name">ICANSPELL</string>
+    <string name="facebook_app_id">3273184616326364</string>
+    <string name="fb_login_protocol_scheme">fb3273184616326364</string>
+    <string name="facebook_client_token">5841c7cdef08dd6cd768f7e7b2c383d9</string>
+</resources>
